- Modify: The basic structure of the io.starflow package was created. - unFixed: LWJGL's error of upgrade.